--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     <a href="https://www.linkedin.com/in/federico-calesella/" target="_blank" class="text-white me-3"><i class="bi bi-linkedin" style="font-size: 1.5rem;"></i></a>
                     <span class="text-white mx-2">|</span>
                     <a href="assets/Federico_Calesella_Resume.pdf" download class="btn btn-success me-2">Download CV</a>
-                    <a href="#contact" class="btn btn-outline-warning">Contact</a>
+                    <a href="public/contact.html" class="btn btn-outline-warning">Contact</a>
                 </div>
                 </form>
             </div>
