--- a/public/contact.html
+++ b/public/contact.html
@@ -18,7 +18,7 @@
                 <!-- Replace "your-email@example.com" with your actual email -->
 
                 <input type="hidden" name="_captcha" value="false">
-                <input type="hidden" name="_next" value="thankyou.html">  <!-- Redirect after submission -->
+                <input type="hidden" name="_next" value="public/thankyou.html">  <!-- Redirect after submission -->
 
                 <div class="mb-3">
                     <label for="name" class="form-label">Full Name</label>
